refs #102: Enable the new app registration test